test/error/fun_dup_name.snek
(fun (f x) x)
(fun (f x) (+ x 1))
(f 1)
